src/test/ui/consts/const-pattern-irrefutable.stderr
error[E0005]: refutable pattern in local binding: `0u8..=1u8` and `3u8..=u8::MAX` not covered
  --> $DIR/const-pattern-irrefutable.rs:12:9
   |
LL | const a: u8 = 2;
   | ---------------- constant defined here
...
LL |     let a = 4;
   |         ^
   |         |
   |         interpreted as a constant pattern, not a new variable
   |         help: introduce a variable instead: `a_var`
   |
   = note: the matched value is of type `u8`

error[E0005]: refutable pattern in local binding: `0u8..=1u8` and `3u8..=u8::MAX` not covered
  --> $DIR/const-pattern-irrefutable.rs:13:9
   |
LL |     pub const b: u8 = 2;
   |     -------------------- constant defined here
...
LL |     let c = 4;
   |         ^
   |         |
   |         interpreted as a constant pattern, not a new variable
   |         help: introduce a variable instead: `c_var`
   |
   = note: the matched value is of type `u8`

error[E0005]: refutable pattern in local binding: `0u8..=1u8` and `3u8..=u8::MAX` not covered
  --> $DIR/const-pattern-irrefutable.rs:14:9
   |
LL |     pub const d: u8 = 2;
   |     -------------------- constant defined here
...
LL |     let d = 4;
   |         ^
   |         |
   |         interpreted as a constant pattern, not a new variable
   |         help: introduce a variable instead: `d_var`
   |
   = note: the matched value is of type `u8`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0005`.
